--- a/BackgroundColor/index.html
+++ b/BackgroundColor/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>hi i am background color</h1>
+    <h1>how are you</h1>
     <button id="btn">Click me</button>
 </body>
 </html>
